hphp/test/quick/priv4.php.expectf
D1::foo true

Fatal error: Call to private method X5::foo() from context 'D5' in %s on line 26
